# meuporg

./: .gitignore  .travis.yml  Makefile  README.md  mapfile.txt  milestones.txt  pd.txt  protocole.txt
mapEditor/: main.cpp  mapEditor.cbp
mapEditor/source/: Game.cpp  Game.hpp  ResourceId.hpp
mapEditor/source/Gui/: GUIButtonPool.hpp  GUITextInputPool.cpp  GUITextInputPool.hpp
meuporg-client/: CMakeLists.txt  meuporg-client.cbp  meuporg-client.depend
meuporg-client/assets/fonts/: secrcode.txt
meuporg-client/source/: GraphicsUtils.inl  NetworkValue.hpp  NetworkValues.hpp  PlayerInput.hpp  ResouceId.hpp  ResourceId.hpp  SFMLPacketUtils.hpp  SFMLPacketUtils.inl  State.hpp  main.cpp
meuporg-client/source/Entity/: Animation.cpp  Animation.hpp  Box.cpp  Box.hpp  Bullet.cpp  Bullet.hpp  Entity.cpp  Entity.hpp  EntityWithStats.cpp  EntityWithStats.hpp  Mission.cpp  Mission.hpp  Monster.cpp  Monster.hpp  Npc.cpp  Npc.hpp  Player.cpp  Player.hpp  Tower.cpp  Tower.hpp
meuporg-client/source/Game/: Environment.cpp  Environment.hpp  FontLoader.cpp  FontLoader.hpp  Game.cpp  Game.hpp  Level.cpp  Level.hpp  Map.cpp  Map.hpp  TextureLoader.cpp  TextureLoader.hpp  Tile.cpp  Tile.hpp  TileMap.cpp  TileMap.hpp  World.cpp  World.hpp
meuporg-client/source/Gui/: Chat.cpp  Chat.hpp  Dialog.cpp  Dialog.hpp  DialogManager.cpp  DialogManager.hpp  GUIButtonPool.cpp  GUIButtonPool.hpp  GUITextInputPool.cpp  GUITextInputPool.hpp  Hud.cpp  Hud.hpp  NameText.cpp  NameText.hpp  Statistic.cpp  Statistic.hpp
meuporg-client/source/Loading/: Loading.cpp  Loading.hpp
meuporg-client/source/Menu/: Menu.cpp  Menu.hpp
meuporg-client/source/RandomNumberGenerator/: RandomNumberGenerator.cpp  RandomNumberGenerator.hpp
meuporg-mapEditor/: main.cpp  meuporg-mapEditor.cbp
meuporg-mapEditor/source/: GraphicsUtils.inl  ResourceHolder.hpp
meuporg-mapEditor/source/Gui/: GUIButtonPool.cpp  GraphicsUtils.hpp
meuporg-server/: CMakeLists.txt  meuporg-server.cbp  meuporg-server.depend
meuporg-server/db/: players.sqlite
meuporg-server/db.empty/: players.sqlite
meuporg-server/maps/: basic.map
meuporg-server/source/: Accounts.hpp  ClientEntityEnums.hpp  Multithreading.hpp  MultithreadingOutput.hpp  NetworkValues.hpp  PlayerInput.hpp  ServerConfiguration.hpp  main.cpp
meuporg-server/source/Components/: BasicStatsComponent.cpp  BasicStatsComponent.hpp  BonusComponent.cpp  BonusComponent.hpp  ClientLinkComponent.cpp  ClientLinkComponent.hpp  DamageComponent.cpp  DamageComponent.hpp  LevelStatsComponent.cpp  LevelStatsComponent.hpp  LifetimeComponent.cpp  LifetimeComponent.hpp  MonsterAIComponent.cpp  MonsterAIComponent.hpp  NameComponent.cpp  NameComponent.hpp  StaticMarkerComponent.cpp  StaticMarkerComponent.hpp  TowerAIComponent.cpp  TowerAIComponent.hpp  WeaponComponent.cpp  WeaponComponent.hpp
meuporg-server/source/Database/: Database.cpp  Database.hpp  PlayerData.hpp
meuporg-server/source/InformationServer/: InformationServer.cpp  InformationServer.hpp
meuporg-server/source/Kantan-2/: Platform.hpp  kantan.hpp
meuporg-server/source/Kantan-2/Component/: AABBHitboxComponent.cpp  AABBHitboxComponent.hpp  AnimationComponent.cpp  AnimationComponent.hpp  BatchedSpriteComponent.cpp  BatchedSpriteComponent.hpp  Component.cpp  Component.hpp  DeletionMarkerComponent.cpp  DeletionMarkerComponent.hpp  MovementComponent.cpp  MovementComponent.hpp  ParticleEffectComponent.cpp  ParticleEffectComponent.hpp  PolygonHitboxComponent.cpp  PolygonHitboxComponent.hpp  RectShapeComponent.cpp  RectShapeComponent.hpp  RotationComponent.cpp  RotationComponent.hpp  SpriteComponent.cpp  SpriteComponent.hpp
meuporg-server/source/Kantan-2/Entity/: Entity.cpp  Entity.hpp
meuporg-server/source/Kantan-2/Event/: Event.cpp  Event.hpp
meuporg-server/source/Kantan-2/GUI/: GUIButtonPool.cpp  GUIButtonPool.hpp  GUIGraph.cpp  GUIGraph.hpp  GUITextInputPool.cpp  GUITextInputPool.hpp
meuporg-server/source/Kantan-2/ResourceHolder/: ResourceHolder.hpp  ResourceHolder.inl
meuporg-server/source/Kantan-2/System/: AABBCollisionSystem.cpp  AABBCollisionSystem.hpp  AnimationSystem.cpp  AnimationSystem.hpp  BatchedSpriteRenderSystem.cpp  BatchedSpriteRenderSystem.hpp  ParticleEffectRenderSystem.cpp  ParticleEffectRenderSystem.hpp  ParticleEffectUpdateSystem.cpp  ParticleEffectUpdateSystem.hpp  PolygonCollisionSystem.cpp  PolygonCollisionSystem.hpp  RectShapeRenderSystem.cpp  RectShapeRenderSystem.hpp  RotationSystem.cpp  RotationSystem.hpp  SpriteRenderSystem.cpp  SpriteRenderSystem.hpp  SynchronizeBatchedSpriteSystem.cpp  SynchronizeBatchedSpriteSystem.hpp  SynchronizeRectShapeSystem.cpp  SynchronizeRectShapeSystem.hpp  SynchronizeSpriteSystem.cpp  SynchronizeSpriteSystem.hpp  System.cpp  System.hpp
meuporg-server/source/Kantan-2/Utils/: GraphicsUtils.hpp  GraphicsUtils.inl  MathUtils.cpp  MathUtils.hpp  StringUtils.cpp  StringUtils.hpp  StringUtils.inl
meuporg-server/source/LoginServer/: LoginServer.cpp  LoginServer.hpp
meuporg-server/source/MapLoader/: MapLoader.cpp  MapLoader.hpp
meuporg-server/source/RandomNumberGenerator/: RandomNumberGenerator.cpp  RandomNumberGenerator.hpp
meuporg-server/source/Server/: Server.cpp  Server.hpp
meuporg-server/source/Systems/: ClientInputSystem.cpp  ClientInputSystem.hpp  LevelUpSystem.cpp  LevelUpSystem.hpp  LifetimeSystem.cpp  LifetimeSystem.hpp  MonsterAISystem.cpp  MonsterAISystem.hpp  TowerAISystem.cpp  TowerAISystem.hpp  WeaponCooldownSystem.cpp  WeaponCooldownSystem.hpp
meuporg-server/source/Utils/: Maths.hpp  SFMLPacketUtils.cpp  SFMLPacketUtils.hpp  SFMLPacketUtils.inl  StringUtils.hpp  StringUtils.inl
meuporg-server/source/World/: World.cpp  World.hpp
meuporg-server/source/sqlite/: sqlite3.h
