cmake_minimum_required(VERSION 3.7)
project(meuporg-royale-server)

set(CMAKE_CXX_STANDARD_REQUIRED true)
set(CMAKE_CXX_STANDARD 11)

include_directories(meuporg-server/source)
include_directories(meuporg-server/source/Components)
include_directories(meuporg-server/source/Database)
include_directories(meuporg-server/source/InformationServer)
include_directories(meuporg-server/source/Kantan-2)
include_directories(meuporg-server/source/Kantan-2/Component)
include_directories(meuporg-server/source/Kantan-2/Entity)
include_directories(meuporg-server/source/Kantan-2/Event)
include_directories(meuporg-server/source/Kantan-2/GUI)
include_directories(meuporg-server/source/Kantan-2/ResourceHolder)
include_directories(meuporg-server/source/Kantan-2/System)
include_directories(meuporg-server/source/Kantan-2/Utils)
include_directories(meuporg-server/source/LoginServer)
include_directories(meuporg-server/source/MapLoader)
include_directories(meuporg-server/source/RandomNumberGenerator)
include_directories(meuporg-server/source/Server)
include_directories(meuporg-server/source/Systems)
include_directories(meuporg-server/source/Utils)
include_directories(meuporg-server/source/World)
include_directories(meuporg-server/source/sqlite)

include_directories(./SFML-2.5.0/include)
link_directories(./SFML-2.5.0/lib)

add_executable(meuporg-royale-server
              meuporg-server/source/main.cpp
              meuporg-server/source/Components/BasicStatsComponent.cpp
              meuporg-server/source/Components/ClientLinkComponent.cpp
              meuporg-server/source/Components/DamageComponent.cpp
              meuporg-server/source/Components/LevelStatsComponent.cpp
              meuporg-server/source/Components/LifetimeComponent.cpp
              meuporg-server/source/Components/MonsterAIComponent.cpp
              meuporg-server/source/Components/NameComponent.cpp
              meuporg-server/source/Components/StaticMarkerComponent.cpp
              meuporg-server/source/Components/TowerAIComponent.cpp
              meuporg-server/source/Components/WeaponComponent.cpp
              meuporg-server/source/Database/Database.cpp
              meuporg-server/source/InformationServer/InformationServer.cpp
              meuporg-server/source/Kantan-2/Component/AABBHitboxComponent.cpp
              meuporg-server/source/Kantan-2/Component/AnimationComponent.cpp
              meuporg-server/source/Kantan-2/Component/BatchedSpriteComponent.cpp
              meuporg-server/source/Kantan-2/Component/Component.cpp
              meuporg-server/source/Kantan-2/Component/DeletionMarkerComponent.cpp
              meuporg-server/source/Kantan-2/Component/MovementComponent.cpp
              meuporg-server/source/Kantan-2/Component/ParticleEffectComponent.cpp
              meuporg-server/source/Kantan-2/Component/PolygonHitboxComponent.cpp
              meuporg-server/source/Kantan-2/Component/RectShapeComponent.cpp
              meuporg-server/source/Kantan-2/Component/RotationComponent.cpp
              meuporg-server/source/Kantan-2/Component/SpriteComponent.cpp
              meuporg-server/source/Kantan-2/Entity/Entity.cpp
              meuporg-server/source/Kantan-2/Event/Event.cpp
              meuporg-server/source/Kantan-2/GUI/GUIButtonPool.cpp
              meuporg-server/source/Kantan-2/GUI/GUIGraph.cpp
              meuporg-server/source/Kantan-2/GUI/GUITextInputPool.cpp
              meuporg-server/source/Kantan-2/System/AABBCollisionSystem.cpp
              meuporg-server/source/Kantan-2/System/AnimationSystem.cpp
              meuporg-server/source/Kantan-2/System/BatchedSpriteRenderSystem.cpp
              meuporg-server/source/Kantan-2/System/ParticleEffectRenderSystem.cpp
              meuporg-server/source/Kantan-2/System/ParticleEffectUpdateSystem.cpp
              meuporg-server/source/Kantan-2/System/PolygonCollisionSystem.cpp
              meuporg-server/source/Kantan-2/System/RectShapeRenderSystem.cpp
              meuporg-server/source/Kantan-2/System/RotationSystem.cpp
              meuporg-server/source/Kantan-2/System/SpriteRenderSystem.cpp
              meuporg-server/source/Kantan-2/System/SynchronizeBatchedSpriteSystem.cpp
              meuporg-server/source/Kantan-2/System/SynchronizeRectShapeSystem.cpp
              meuporg-server/source/Kantan-2/System/SynchronizeSpriteSystem.cpp
              meuporg-server/source/Kantan-2/System/System.cpp
              meuporg-server/source/Kantan-2/Utils/MathUtils.cpp
              meuporg-server/source/Kantan-2/Utils/StringUtils.cpp
              meuporg-server/source/LoginServer/LoginServer.cpp
              meuporg-server/source/MapLoader/MapLoader.cpp
              meuporg-server/source/RandomNumberGenerator/RandomNumberGenerator.cpp
              meuporg-server/source/Server/Server.cpp
              meuporg-server/source/Systems/ClientInputSystem.cpp
              meuporg-server/source/Systems/LevelUpSystem.cpp
              meuporg-server/source/Systems/LifetimeSystem.cpp
              meuporg-server/source/Systems/MonsterAISystem.cpp
              meuporg-server/source/Systems/TowerAISystem.cpp
              meuporg-server/source/Systems/WeaponCooldownSystem.cpp
              meuporg-server/source/Utils/SFMLPacketUtils.cpp
              meuporg-server/source/World/World.cpp
              meuporg-server/source/sqlite/sqlite3.c
              )
target_link_libraries(meuporg-royale-server sfml-system-d sfml-window-d sfml-graphics-d sfml-network-d sfml-audio-d)
